Stylesheet/emote/tag updates 2014-11-11

--- a/source-css/clopmotes.css
+++ b/source-css/clopmotes.css
@@ -429,8 +429,12 @@ a[href|="/stripeass"], a[href|="/zecoraoops"], a[href|="/zecoraanal"], a[href|="
 {background-image:url(%%misfitse%%);display:block;float:left;}
 
 /* Misfits f */
-a[href|="/twidrip"], a[href|="/twipanties"], a[href|="/twibegentle"], a[href|="/twibadteacher"] , a[href|="/twilacornpeek"]
+a[href|="/twidrip"], a[href|="/twipanties"], a[href|="/twibegentle"], a[href|="/twibadteacher"] , a[href|="/twilacornpeek"], a[href|="/twisockpresents"], a[href|="/twispread"], a[href|="/tdschoolfillies"]
 {background-image:url(%%misfitsf%%);display:block;float:left;}
+
+/* Misfits g */
+a[href|="/raricock"], a[href|="/pussylantern"]
+{background-image:url(%%misfitsg%%);display:block;float:left;}
 
 
 /* Animated Emotes */
@@ -481,4 +485,9 @@ a[href|="/twibegentle"] {width: 118px;height:150px;background-position: 0px -350
 a[href|="/twibadteacher"] {width: 186px;height:200px;background-position: -176px 0px;}
 a[href|="/twilacornpeek"] {width: 209px;height:200px;background-position: -188px -200px;}
 a[href|="/ggnome"] {width: 170px;height:200px;background-position: 0px -598px;}
-a[href|="/"] {width: 133px;height:200px;background-position: 0px -598px;}
+a[href|="/twispread"] {width: 226px;height:200px;background-position: -137px -400px;}
+a[href|="/tdschoolfillies"] {width: 261px;height:200px;background-position: -137px -600px;}
+a[href|="/twisockpresents"] {width: 137px;height:300px;background-position: 0px -500px;}
+a[href|="/raricock"] {width: 158px;height:250px;background-position: 0px 0px;}
+a[href|="/pussylantern"] {width: 148px;height:150px;background-position: -158px 0px;}
+a[href|="/"] {width: 148px;height:150px;background-position: 0px -598px;}
