--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -828,6 +828,12 @@ a[href|="/applederp"],a[href|="/a39"],a[href|="/rapplederp"],a[href|="/ra39"],a[
 
 .flair-cmchaz {background-position: -300% -100%}
 .flair-cmchaz:hover {background-position: -200% -700%}
+.flair-cmclinker {background-position: -300% -100%}
+.flair-cmclinker:hover {background-position: -0% -0%}
+.flair-cmclanky {background-position: -300% -100%}
+.flair-cmclanky:hover {background-position: -0% -300%}
+.flair-cmcchinchy {background-position: -300% -100%}
+.flair-cmcchinchy:hover {background-position: -100% -200%}
 
 
 
