--- a/source-css/ploungeafterdark.css
+++ b/source-css/ploungeafterdark.css
@@ -944,6 +944,7 @@ padding:5px
 .linkflair-halloween .linkflairlabel,.flairoptionpane .linkflair-Halloween .linkflairlabel {color:#fff!important;background: linear-gradient(to bottom, black, orange, black);}
 
 .flairoptionpane ul:nth-child(2) li:nth-child(6) { display: none !important; }
+.flairoptionpane ul:nth-child(1) li:nth-child(6) { display: none !important; }
 
 .side .md a[href="http://www.reddit.com/r/ploungeafterdark/"] {
 display:inline-block;
