--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -512,7 +512,7 @@ a[href|="/zecoraspooky"], a[href|="/zecorabored"], a[href|="/zecoramagicdust"], 
 {background-image:url(%%misfitsj%%);display:block;float:left;}
 
 /* Misfits k */
-a[href|="/cadscience"], a[href|="/appul"], a[href|="/sadprincesshorse"]
+a[href|="/cadscience"], a[href|="/appul"], a[href|="/sadprincesshorse"], a[href|="/humaud"], a[href|="/cutemena"]
 {background-image:url(%%misfitsk%%);display:block;float:left;}
 
 /*
@@ -1171,3 +1171,5 @@ a[href|="/feelzies"] {width:83px;height:100px;background-position: -628px -600px
 a[href|="/cadscience"] {width:112px;height:160px;}
 a[href|="/appul"] {width:125px;height:150px;background-position: -112px 0;}
 a[href|="/sadprincesshorse"] {width:200px;height:132px;background-position: -237px 0;}
+a[href|="/humaud"] {width:90px;height:200px;background-position: 0 -160px;}
+a[href|="/cutemena"] {width:92px;height:200px;background-position: -90px -160px;}
