--- a/source-css/ponymotesextra.css
+++ b/source-css/ponymotesextra.css
@@ -1,6 +1,6 @@
 /* /r/ponymotesextra CSS!
  * Just animotes from /r/PonyMotes really.
- * Image Count: 47/50 - It looks like /r/ponymotesextra2 is IMMINENT.
+ * Image Count: 48/50 - It looks like /r/ponymotesextra2 is IMMINENT.
  */
 
 /* Animated Emotes */
@@ -51,6 +51,7 @@ a[href|="/cutefire"] {background-image: url(%%cutefire%%);width:110px;height:125
 a[href|="/rollin"] {background-image: url(%%rollin%%);width:170px;height:139px;display:block;float:left;}
 a[href|="/chairdash"] {background-image: url(%%chairdash%%);width:149px;height:150px;display:block;float:left;}
 a[href|="/runningdashie"] {background-image: url(%%runningdashie%%);width:99px;height:100px;display:block;float:left;}
+a[href|="/ninjadash"] {background-image: url(%%ninjadash%%);width:250px;height:101px;display:block;float:left;}
 
 /* Non-Animated Emotes */
 /* Just kidding, they're all animated here. */
