--- a/source-css/sunsetshimmer.css
+++ b/source-css/sunsetshimmer.css
@@ -159,19 +159,19 @@ body {
 }
 
 .arrow.up { 
-  background: url(%%arrows%%) 0 0;
+  background: url(%%oddballs%%) -604px  -210px;
   height: 20px;
   width: 15px; 
 }
 
 .arrow.upmod { 
-  background: url(%%arrows%%) 0 -20px;
+  background: url(%%oddballs%%) -619px -210px;
   height: 20px; 
   width: 15px;  
 }
 
 .arrow.downmod { 
-  background: url(%%arrows%%) 0px -40px;
+  background: url(%%oddballs%%) -634px -210px;
   height: 20px; 
   width: 15px;  
 }
@@ -547,7 +547,7 @@ a[href|="/rdcry"],a[href|="/rrdcry"],a[href|="/dumbfabric"],a[href|="/rdumbfabri
   background-position:-200% -500%;
 }
 
-a[href|="/abbored"],a[href|="/abmerp"],a[href|="/rabbored"],a[href|="/rabmerp"],a[href|="/rarityannoyed"],a[href|="/rrarityannoyed"],a[href|="/derpyshock"],a[href|="/rderpyshock"],a[href|="/cheerilee"],a[href|="/rcheerilee"],.flair-caramel {
+a[href|="/abbored"],a[href|="/abmerp"],a[href|="/rabbored"],a[href|="/rabmerp"],a[href|="/rarityannoyed"],a[href|="/rrarityannoyed"],a[href|="/derpyshock"],a[href|="/rderpyshock"],a[href|="/cheerilee"],a[href|="/rcheerilee"],a[href|="/sunsetawkward"],a[href|="/ssawkward"],.side .md table tr:nth-of-type(13) td:nth-of-type(3):after,.flair-caramel {
   background-position:-200% -600%;
 }
 
@@ -615,7 +615,7 @@ a[href|="/silverspoon"],a[href|="/sspout"],a[href|="/rsilverspoon"],a[href|="/rs
   background-position:-300% -500%;
 }
 
-a[href|="/rarityreally"],a[href|="/rrarityreally"],a[href|="/soawesome"],a[href|="/rsoawesome"],a[href|="/shiningpride"],a[href|="/rshiningpride"],.flair-braeburn {
+a[href|="/rarityreally"],a[href|="/rrarityreally"],a[href|="/soawesome"],a[href|="/rsoawesome"],a[href|="/shiningpride"],a[href|="/rshiningpride"],a[href|="/sunsetdetermined"],a[href|="/ssdetermined"],a[href|="/myturn"],a[href|="/sunsetabsolutelydisgusting"],a[href|="/ssabsolutelydisgusting"],.side .md table tr:nth-of-type(13) td:nth-of-type(4):after,.flair-braeburn {
   background-position:-300% -600%;
 }
 
@@ -775,7 +775,7 @@ a[href|="/sunsetshocked"],a[href|="/ssshocked"],a[href|="/sneakysunset"],a[href|
   background-image:url(%%sunnyamotes%%)!important;
 }
 
-a[href|="/sunnybunch"],a[href|="/sunsetadorable"],a[href|="/ssadorable"],a[href|="/sunsetpoint"],a[href|="/youmustbenewhere"],a[href|="/sspoint"],a[href|="/sunsetsmug"],a[href|="/sunsetcontempt"],a[href|="/sssmug"],a[href|="/sscontempt"],a[href|="/sarcasticsunset"],a[href|="/sarcasticss"],a[href|="/sunsetrage"],a[href|="/ssrage"],a[href|="/innocentsunset"],a[href|="/innocentss"],a[href|="/sunsetgrin"],a[href|="/ssgrin"],a[href|="/sunsetscrunch"],a[href|="/ssscrunch"],a[href|="/sunsetmine"],a[href|="/ssmine"],a[href|="/sunsetsmirk"],a[href|="/sssmirk"],a[href|="/sunsetexplains"],a[href|="/ssexplains"],a[href|="/pleadingsunset"],a[href|="/crocodiletears"],a[href|="/pleadingss"],a[href|="/sunsetdismissal"],a[href|="/talktothehand"],a[href|="/ssdismissal"],a[href|="/frustratedsunset"],a[href|="/frustratedss"],a[href|="/sunsetyuck"],a[href|="/ssyuck"],a[href|="/winkingsunset"],a[href|="/winkingss"],a[href|="/sunsetwink"],a[href|="/hulasunset"],a[href|="/hulass"],a[href|="/pleasantsunset"],a[href|="/pleasantss"],a[href|="/sunsetplotting"],a[href|="/ssplotting"],a[href|="/sunsetsaywhat"],a[href|="/sssaywhat"],a[href|="/rsunnybunch"],a[href|="/rsunsetadorable"],a[href|="/rssadorable"],a[href|="/rsunsetpoint"],a[href|="/ryoumustbenewhere"],a[href|="/rsspoint"],a[href|="/rsunsetsmug"],a[href|="/rsunsetcontempt"],a[href|="/rsssmug"],a[href|="/rsscontempt"],a[href|="/rsarcasticsunset"],a[href|="/rsarcasticss"],a[href|="/rsunsetrage"],a[href|="/rssrage"],a[href|="/rinnocentsunset"],a[href|="/rinnocentss"],a[href|="/rsunsetgrin"],a[href|="/rssgrin"],a[href|="/rsunsetscrunch"],a[href|="/rssscrunch"],a[href|="/rsunsetmine"],a[href|="/rssmine"],a[href|="/rsunsetsmirk"],a[href|="/rsssmirk"],a[href|="/rsunsetexplains"],a[href|="/rssexplains"],a[href|="/rpleadingsunset"],a[href|="/rcrocodiletears"],a[href|="/rpleadingss"],a[href|="/rsunsetdismissal"],a[href|="/rtalktothehand"],a[href|="/rssdismissal"],a[href|="/rfrustratedsunset"],a[href|="/rfrustratedss"],a[href|="/rsunsetyuck"],a[href|="/rssyuck"],a[href|="/rwinkingsunset"],a[href|="/rwinkingss"],a[href|="/rsunsetwink"],a[href|="/rhulasunset"],a[href|="/rhulass"],a[href|="/rpleasantsunset"],a[href|="/rpleasantss"],a[href|="/rsunsetplotting"],a[href|="/rssplotting"],a[href|="/rsunsetsaywhat"],a[href|="/rsssaywhat"],a[href|="/shimmerbetes"],a[href|="/sunsetsmile"],a[href|="/sssmile"],a[href|="/ssscreamer"],a[href|="/sunsetscreamer"],a[href|="/ssohcomeon"],a[href|="/sunsetohcomeon"],a[href|="/ssshout"],a[href|="/sunsetshout"],a[href|="/sunsetglad"],a[href|="/ssglad"],a[href|="/sunsetthanks"],a[href|="/ssthanks"],a[href|="/unamusedsunset"],a[href|="/unamusedss"],a[href|="/sunsetseriously"],a[href|="/ssseriously"],a[href|="/sunsetgratitude"],a[href|="/ssgratitude"],a[href|="/sunsethappyending"],a[href|="/sshappyending"] {
+a[href|="/sunnybunch"],a[href|="/sunsetadorable"],a[href|="/ssadorable"],a[href|="/sunsetpoint"],a[href|="/youmustbenewhere"],a[href|="/sspoint"],a[href|="/sunsetsmug"],a[href|="/sunsetcontempt"],a[href|="/sssmug"],a[href|="/sscontempt"],a[href|="/sarcasticsunset"],a[href|="/sarcasticss"],a[href|="/sunsetrage"],a[href|="/ssrage"],a[href|="/innocentsunset"],a[href|="/innocentss"],a[href|="/sunsetgrin"],a[href|="/ssgrin"],a[href|="/sunsetscrunch"],a[href|="/ssscrunch"],a[href|="/sunsetmine"],a[href|="/ssmine"],a[href|="/sunsetsmirk"],a[href|="/sssmirk"],a[href|="/sunsetexplains"],a[href|="/ssexplains"],a[href|="/pleadingsunset"],a[href|="/crocodiletears"],a[href|="/pleadingss"],a[href|="/sunsetdismissal"],a[href|="/talktothehand"],a[href|="/ssdismissal"],a[href|="/frustratedsunset"],a[href|="/frustratedss"],a[href|="/sunsetyuck"],a[href|="/ssyuck"],a[href|="/winkingsunset"],a[href|="/winkingss"],a[href|="/sunsetwink"],a[href|="/hulasunset"],a[href|="/hulass"],a[href|="/pleasantsunset"],a[href|="/pleasantss"],a[href|="/sunsetplotting"],a[href|="/ssplotting"],a[href|="/sunsetsaywhat"],a[href|="/sssaywhat"],a[href|="/rsunnybunch"],a[href|="/rsunsetadorable"],a[href|="/rssadorable"],a[href|="/rsunsetpoint"],a[href|="/ryoumustbenewhere"],a[href|="/rsspoint"],a[href|="/rsunsetsmug"],a[href|="/rsunsetcontempt"],a[href|="/rsssmug"],a[href|="/rsscontempt"],a[href|="/rsarcasticsunset"],a[href|="/rsarcasticss"],a[href|="/rsunsetrage"],a[href|="/rssrage"],a[href|="/rinnocentsunset"],a[href|="/rinnocentss"],a[href|="/rsunsetgrin"],a[href|="/rssgrin"],a[href|="/rsunsetscrunch"],a[href|="/rssscrunch"],a[href|="/rsunsetmine"],a[href|="/rssmine"],a[href|="/rsunsetsmirk"],a[href|="/rsssmirk"],a[href|="/rsunsetexplains"],a[href|="/rssexplains"],a[href|="/rpleadingsunset"],a[href|="/rcrocodiletears"],a[href|="/rpleadingss"],a[href|="/rsunsetdismissal"],a[href|="/rtalktothehand"],a[href|="/rssdismissal"],a[href|="/rfrustratedsunset"],a[href|="/rfrustratedss"],a[href|="/rsunsetyuck"],a[href|="/rssyuck"],a[href|="/rwinkingsunset"],a[href|="/rwinkingss"],a[href|="/rsunsetwink"],a[href|="/rhulasunset"],a[href|="/rhulass"],a[href|="/rpleasantsunset"],a[href|="/rpleasantss"],a[href|="/rsunsetplotting"],a[href|="/rssplotting"],a[href|="/rsunsetsaywhat"],a[href|="/rsssaywhat"],a[href|="/shimmerbetes"],a[href|="/sunsetsmile"],a[href|="/sssmile"],a[href|="/ssscreamer"],a[href|="/sunsetscreamer"],a[href|="/ssohcomeon"],a[href|="/sunsetohcomeon"],a[href|="/ssshout"],a[href|="/sunsetshout"],a[href|="/sunsetglad"],a[href|="/ssglad"],a[href|="/sunsetthanks"],a[href|="/ssthanks"],a[href|="/unamusedsunset"],a[href|="/unamusedss"],a[href|="/sunsetseriously"],a[href|="/ssseriously"],a[href|="/sunsetgratitude"],a[href|="/ssgratitude"],a[href|="/sunsethappyending"],a[href|="/sshappyending"],a[href|="/sunsetawkward"],a[href|="/ssawkward"],a[href|="/sunsetdetermined"],a[href|="/ssdetermined"],a[href|="/myturn"],a[href|="/sunsetabsolutelydisgusting"],a[href|="/ssabsolutelydisgusting"] {
   display:block;
   clear:none;
   float:left;
@@ -813,7 +813,7 @@ a[href|="/snailssalute"],a[href|="/rsnailssalute"] {
   width:97px;
   height:175px;
   background-image:url(%%oddballs%%)!important;
-  background-position: -914px 0 !important;
+  background-position: -844px 0 !important;
 }
 
 a[href|="/snipssalute"],a[href|="/rsnipssalute"] {
@@ -823,7 +823,7 @@ a[href|="/snipssalute"],a[href|="/rsnipssalute"] {
   width:86px;
   height:175px;
   background-image:url(%%oddballs%%)!important;
-  background-position: -1011px 0!important;
+  background-position: -941px 0!important;
 }
 
 a[href^="/snailssalute"][href*="-combine"] {
@@ -844,7 +844,7 @@ a[href|="/bossysunset"],a[href|="/bossyss"],a[href|="/bowtome"],a[href|="/rbossy
   width:83px;
   height:175px;
   background-image:url(%%oddballs%%)!important;
-  background-position: -831px 0 !important;
+  background-position: -761px 0 !important;
   margin-right:20px;
 }
 
@@ -855,7 +855,7 @@ a[href|="/breeziess"],a[href|="/breeziesunset"],a[href|="/rbreeziess"],a[href|="
   width:285px;
   height:224px;
   background-image:url(%%oddballs%%)!important;
-  background-position: -70px 0 !important;
+  background-position: 0 0 !important;
 }
 
 a[href|="/sunsetwhy"],a[href|="/sswhy"],a[href|="/rsunsetwhy"],a[href|="/rsswhy"] {
@@ -939,6 +939,7 @@ a[href|="/sunsetshades"],a[href|="/ssshades"],a[href|="/rsunsetshades"],a[href|=
   width:70px;
   height:112px;
   background-image:url(%%oddballs%%)!important;
+  background-position: -1027px -150px !important;
 }
 
 a[href|="/sunsetstainedglass"],a[href|="/ssstainedglass"],a[href|="/rsunsetstainedglass"],a[href|="/rssstainedglass"] {
@@ -948,7 +949,7 @@ a[href|="/sunsetstainedglass"],a[href|="/ssstainedglass"],a[href|="/rsunsetstain
   width:224px;
   height:224px;
   background-image:url(%%oddballs%%);
-  background-position: -355px 0 !important;
+  background-position: -285px 0 !important;
 }
 
 a[href|="/sunsetspin"],a[href|="/ssspin"],a[href|="/rsunsetspin"],a[href|="/rssspin"] {
@@ -1025,7 +1026,7 @@ a[href|="/ssterror"],a[href|="/rssterror"] {
   width:70px;
   height:70px;
   background-image:url(%%oddballs%%)!important;
-  background-position: -579px -140px !important;
+  background-position: -509px -140px !important;
 }
 
 a[href|="/sshorror"],a[href|="/rsshorror"] {
@@ -1035,7 +1036,7 @@ a[href|="/sshorror"],a[href|="/rsshorror"] {
   width:70px;
   height:70px;
   background-image:url(%%oddballs%%)!important;
-  background-position: -649px -140px !important;
+  background-position: -579px -140px !important;
 }
 
 a[href|="/sunsetsoda"],a[href|="/sssoda"],a[href|="/rsunsetsoda"],a[href|="/rsssoda"] {
@@ -1045,7 +1046,7 @@ a[href|="/sunsetsoda"],a[href|="/sssoda"],a[href|="/rsunsetsoda"],a[href|="/rsss
   width:109px;
   height:140px;
   background-image:url(%%oddballs%%)!important;
-  background-position: -579px 0 !important;
+  background-position: -509px 0 !important;
 }
 
 a[href|="/sunsetnya"],a[href|="/ssnya"],a[href|="/rsunsetnya"],a[href|="/rssnya"] {
@@ -1055,7 +1056,29 @@ a[href|="/sunsetnya"],a[href|="/ssnya"],a[href|="/rsunsetnya"],a[href|="/rssnya"
   width:143px;
   height:140px;
   background-image: url(%%oddballs%%)!important;
-  background-position: -688px 0 !important;
+  background-position: -618px 0 !important;
+}
+
+
+a[href|="/sunsetpretzel"],a[href|="/sspretzel"] {
+  display:block;
+  clear:none;
+  float:left;
+  width:113px;
+  height:112px;
+  background-image: url(%%oddballs%%)!important;
+  background-position: -649px -140px !important;
+}
+
+
+a[href|="/twilightshimmer"],a[href|="/twilightss"] {
+  display:block;
+  clear:none;
+  float:left;
+  width:132px;
+  height:175px;
+  background-image: url(%%oddballs%%)!important;
+  background-position: -1294px 0 !important;
 }
 
 a[href|="/sunsetexcited"], a[href|="/ssexcited"] {
@@ -1065,7 +1088,7 @@ a[href|="/sunsetexcited"], a[href|="/ssexcited"] {
   width: 150px;
   height: 150px;
   background-image: url(%%oddballs%%)!important;
-  background-position: -1097px 0 !important;
+  background-position: -1027px 0 !important;
   margin-bottom: -18px;
   position: relative !important;
   z-index: 98;
@@ -1097,7 +1120,49 @@ a[href|="/sunsetsuitup"],a[href|="/sssuitup"] {
   width: 117px;
   height: 150px;
   background-image: url(%%oddballs%%)!important;
-  background-position: -1247px 0;
+  background-position: -1177px 0;
+}
+
+a[href|="/sunsetconfused"],a[href|="/ssconfused"] {
+  display: block;
+  clear: none;
+  float: left;
+  width: 144px;
+  height: 112px;
+  background-image: url(%%oddballs%%)!important;
+  background-position: -1097px -150px;
+}
+
+a[href|="/sunsetsenpai"],a[href|="/sssenpai"],a[href|="/sunsetsempai"],a[href|="/sssempai"] {
+  display: block;
+  clear: none;
+  float: left;
+  width: 127px;
+  height: 224px;
+  background-image: url(%%oddballs%%)!important;
+  background-position: -1426px 0;
+  margin-bottom: -15px;
+  position: relative !important;
+  z-index: 98;
+}
+
+a[href|="/unbreakablesunset"],a[href|="/unbreakabless"] {
+  display:block;
+  clear:none;
+  float:left;
+  width:88px;
+  height:174px;
+  background-image:url(%%unbreakablesunset%%);
+}
+
+
+a[href|="/standingsunset"],a[href|="/standingss"] {
+  display:block;
+  clear:none;
+  float:left;
+  width:66px;
+  height:176px;
+  background-image:url(%%ssstand%%);
 }
 
 a[href|="/advicesunsetp"], a[href|="/advicesunseth"], a[href|="/advicessp"], a[href|="/advicessh"] {
@@ -1171,7 +1236,9 @@ a[href|="/sunsetapplauds"],a[href|="/rsunsetapplauds"],a[href|="/ssapplauds"],a[
 
 START-PONYSCRIPT-IGNORE { color: red; }
 
-.side a[href|="/ssexcited"] { margin-bottom: -13px; }
+.side a[href|="/ssexcited"] {margin-bottom: -13px;}
+
+.side a[href|="/sssenpai"] {margin-bottom: -13px;}
 
 a[href|="/sunsetapplauds"],a[href|="/rsunsetapplauds"],a[href|="/ssapplauds"],a[href|="/rssapplauds"] {
   -webkit-animation: applause 320ms steps(4) infinite;
@@ -1181,20 +1248,20 @@ a[href|="/sunsetapplauds"],a[href|="/rsunsetapplauds"],a[href|="/ssapplauds"],a[
 }
 
 @-webkit-keyframes applause {
-  from { background-position: -0px; }
-  to { background-position: -384px; }
+  from { background-position: -96px; }
+  to { background-position: -480px; }
 }
 @-moz-keyframes applause {
-  from { background-position: -0px; }
-  to { background-position: -384px; }
+  from { background-position: -96px; }
+  to { background-position: -480px; }
 }
 @-o-keyframes applause {
-  from { background-position: -0px; }
-  to { background-position: -384px; }
+  from { background-position: -96px; }
+  to { background-position: -480px; }
 }
 @keyframes applause {
-  from { background-position: -0px; }
-  to { background-position: -384px; }
+  from { background-position: -96px; }
+  to { background-position: -480px; }
 }
 
 a[href|="/sunsetlaugh"],a[href|="/sslaugh"],a[href|="/rsunsetlaugh"],a[href|="/rsslaugh"] {
@@ -1229,7 +1296,62 @@ a[href|="/sunsetlaugh"],a[href|="/sslaugh"],a[href|="/rsunsetlaugh"],a[href|="/r
     to {background-position: -4480px}
 }
 
-a[href|="/clappingsunset"],a[href|="/rclappingsunset"],a[href|="/clappingss"],a[href|="/rclappingss"] {
+a[href|="/unbreakablesunset"],a[href|="/unbreakabless"] {
+  -webkit-animation: unbreakabless 3.9s steps(78) infinite;
+  -moz-animation: unbreakabless 3.9s steps(78) infinite;
+  -o-animation: unbreakabless 3.9s steps(78) infinite;
+  animation: unbreakabless 3.9s steps(78) infinite;
+}
+
+@-webkit-keyframes unbreakabless {
+  from {background-position: -88px}
+  to {background-position: -6952px}
+}
+
+@-moz-keyframes unbreakabless {
+  from {background-position: -88px}
+    to {background-position: -6952px}
+}
+
+@-o-keyframes unbreakabless {
+  from {background-position: -88px}
+  to {background-position: -6952px}
+}
+
+@keyframes unbreakabless {
+  from {background-position: -88px}
+    to {background-position: -6952px}
+}
+
+a[href|="/standingsunset"],a[href|="/standingss"] {
+  -webkit-animation: standingss 8.52s steps(213) infinite;
+  -moz-animation: standingss 8.52s steps(213) infinite;
+  -o-animation: standingss 8.52s steps(213) infinite;
+  animation: standingss 8.52s steps(213) infinite;
+}
+
+
+@-webkit-keyframes standingss {
+  from {background-position: -66px}
+  to {background-position: -14124px}
+}
+
+@-moz-keyframes standingss {
+  from {background-position: -66px}
+    to {background-position: -14124px}
+}
+
+@-o-keyframes standingss {
+  from {background-position: -66px}
+  to {background-position: -14124px}
+}
+
+@keyframes standingss {
+  from {background-position: -66px}
+    to {background-position: -14124px}
+}
+
+a[href|="/sunsetclop"],a[href|="/ssclop"],a[href|="/clappingsunset"],a[href|="/rclappingsunset"],a[href|="/clappingss"],a[href|="/rclappingss"] {
   -webkit-animation: ssclap 276ms steps(3) infinite;
   -moz-animation: ssclap 276ms steps(3) infinite;
   -o-animation: ssclap 276ms steps(3) infinite;
@@ -1237,23 +1359,23 @@ a[href|="/clappingsunset"],a[href|="/rclappingsunset"],a[href|="/clappingss"],a[
 }
 
 @-webkit-keyframes ssclap {
-  from {background-position: 0}
-  to {background-position: -210px}
+  from {background-position: -70px}
+  to {background-position: -280px}
 }
 
 @-moz-keyframes ssclap {
-  from {background-position: 0}
-  to {background-position: -210px}
+  from {background-position: -70px}
+  to {background-position: -280px}
 }
 
 @-o-keyframes ssclap {
-  from {background-position: 0}
-  to {background-position: -210px}
+  from {background-position: -70px}
+  to {background-position: -280px}
 }
 
 @keyframes ssclap {
-  from{background-position: 0}
-    to{background-position: -210px}
+  from{background-position: -70px}
+    to{background-position: -280px}
 }
 
 a[href|="/flyingsunset"],a[href|="/flyingss"],a[href|="/rflyingsunset"],a[href|="/rflyingss"] {
@@ -1307,6 +1429,14 @@ a[href="/s"]::after {
 
 a[href="/s"]:hover::after {
   color: black;
+}
+
+a[href^="/domain"] {
+  -webkit-transform: unset !important;
+  -moz-transform: unset !important;
+  -ms-transform: unset !important;
+  -o-transform: unset !important;
+  transform: unset !important;
 }
 
 END-PONYSCRIPT-IGNORE {color: red}
