--- a/source-css/zponymotes.css
+++ b/source-css/zponymotes.css
@@ -1,4 +1,3 @@
-
 a[href^="/headlesschicken"] {
     background-position: 0px 0px;
     display: block;
@@ -321,7 +320,7 @@ a[href^="/gottaspinfast"] {
     }
 
 
-a[href|="/longbonz"], a[href|="/longbonstairs"], a[href|="/skippytherock"], a[href|="/hoo2"], a[href|="/hoo1"], a[href|="/eeeeviiil"], a[href|="/talltwi"], a[href|="/lbsalute"], a[href|="/lbcomicscrunch"], a[href|="/lbdive"], a[href|="/lbintro"], a[href|="/lbohthis"], a[href|="/lbpushthebutton"], a[href|="/lbrearing"], a[href|="/lbrelaxing"], a[href|="/lbwalk"], a[href|="/lbshrug"], a[href|="/lbteeny"], a[href|="/lbglance"], a[href|="/sbsmirk"]
+a[href|="/longbonz"], a[href|="/longbonstairs"], a[href|="/skippytherock"], a[href|="/hoo2"], a[href|="/hoo1"], a[href|="/eeeeviiil"], a[href|="/talltwi"], a[href|="/lbsalute"], a[href|="/lbcomicscrunch"], a[href|="/lbdive"], a[href|="/lbintro"], a[href|="/lbohthis"], a[href|="/lbpushthebutton"], a[href|="/lbrearing"], a[href|="/lbrelaxing"], a[href|="/lbwalk"], a[href|="/lbshrug"], a[href|="/lbteeny"], a[href|="/lbglance"], a[href|="/sbsmirk"], a[href|="/sonatastare"]
 
  {
     display: block;
@@ -432,4 +431,9 @@ a[href|="/sbsmirk"] {
     width: 129px;
     height: 140px;
     background-position: -286px -490px
+    }
+a[href|="/sonatastare"] {
+    width: 70px;
+    height: 70px;
+    background-position: -630px -140px
     }
