--- a/source-css/berrytrain.css
+++ b/source-css/berrytrain.css
@@ -1,16 +1,8 @@
-.stickied {
-    background-color:black;
-}
-.stickied .title {
-    color:orange!important;
-}
-.stickied-tagline {
-    color:white!important;
-}
+
 
 /*testest*/
 
-.side .titlebox h6 {position:fixed;z-index:1000;bottom:-270px;right:350px;display:block;width:240px;height:286px;padding:0;background:transparent url(%%spookyscary%%) no-repeat top left;font-size:0;text-indent:-9999px;overflow:hidden; transition: bottom 1s;}
+.side .titlebox h6 {position:fixed;z-index:1000;bottom:-270px;right:350px;display:block;width:240px;height:286px;padding:0;background:transparent url(%%dolphin%%) no-repeat top left;font-size:0;text-indent:-9999px;overflow:hidden; transition: bottom 1s;}
 .side .titlebox h6:hover {bottom:-75px; transition: bottom 1s;}
 
 /*letestestend*/
@@ -155,7 +147,7 @@ a[href|="/filly"]
 #header { background: url(%%up%%); }
 
 /* BACKGROUND */
-body { background: url(%%SPOOKS1%%)
+body { background: url(%%4waffleLite%%)
 
 repeat fixed center center ; }
 
@@ -220,8 +212,8 @@ a[href|="/best"] {
 .arrow.up { background: url(%%waf%%) 0 0; } 
 .arrow.upmod { background: url(%%up%%) 0 0; } 
 
-.arrow.down { background: url(%%yarg%%) 0 0; } 
-.arrow.downmod { background: url(%%harg%%) 0 0; }
+.arrow.down { background: url(%%yat%%) 0 0; } 
+.arrow.downmod { background: url(%%ta%%) 0 0; }
 
 /* THINGS */
 a[href="YATTAA"] {
@@ -343,12 +335,12 @@ display:none;
 content: " Garys"
 }
 .users-online .number:after { 
-content: " Spooky Skeletons here now" 
+content: " Horses here now" 
 } 
 
 /* FOOTER */
 .footer-parent:after {
-    content: url(%%spoopywafflestare%%);
+    content: url(%%wafflestare%%);
 }
 
 /* [](/sp) */
