--- a/source-css/maudpie.css
+++ b/source-css/maudpie.css
@@ -1,7 +1,3 @@
-/* hide eqg maud thumbnail */
-.thing[data-fullname="t3_2htjsm"] .thumbnail { visibility: hidden !important; }
-.thing[data-fullname="t3_2htjsm"] .entry a.title::before { content: "[SPOILER] " }
-
 body {
   background: url(%%maudbackg%%) no-repeat fixed center bottom;
 }
@@ -566,6 +562,12 @@ a[href|="/creepymaud"],a[href|="/creepymp"]
 a[href|="/scrunchymaud"],a[href|="/scrunchymp"]
 {display:block;clear:none;float:left;width:244px;height:150px;background-image:url(%%medium%%)!important; background-position: 0 -300px;}
 
+a[href|="/maudbrow"],a[href|="/mpbrow"]
+{display:block;clear:none;float:left;width:117px;height:150px;background-image:url(%%medium%%)!important; background-position: -244px -300px;}
+
+a[href|="/maudsmeel"],a[href|="/mpsmeel"]
+{display:block;clear:none;float:left;width:118px;height:150px;background-image:url(%%medium%%)!important; background-position: -361px -300px;}
+
 a[href|="/rsuperiormaud"],a[href|="/rsuperiormp"]
 {display:block;clear:none;float:left;width:70px;height:70px;background-image:url(%%maud-table%%)!important; background-position: 0 -200%;}
 
@@ -595,6 +597,9 @@ a[href|="/maudpoker"]
 
 a[href|="/maudshrug"]
 {display:block;clear:none;float:left;width:80px;height:80px;background-image:url(%%maudshrug%%)!important; background-position: 0 0;}
+
+a[href|="/princessboulder"],a[href|="/alicornboulder"]
+{display:block;clear:none;float:left;width:80px;height:80px;background-image:url(%%maudshrug%%)!important; background-position: -80px 0;}
 
 a[href|="/maudexcited"],a[href|="/mpexcited"] {
 display:block;clear:none;float:left;width:141px;height:150px;background-image:url(%%maudexcited%%)!important;
